yaml/backendLoadBalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
    spec:
      containers:
      - name: backend
        image: magrcruz/prueba_replit:backend
        ports:
        - containerPort: 4321

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  ports:
  - port: 4321
    targetPort: 4321
  selector:
    role: backend
