yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
spec:
  rules:
  - http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 4321
